--- a/KbLogin/app/build.gradle
+++ b/KbLogin/app/build.gradle
@@ -26,4 +26,16 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:23.4.0'
     testCompile 'junit:junit:4.12'
+
+
+    // retrofit + gson
+    compile 'com.squareup.retrofit2:retrofit:2.1.0' // Retrofit
+    compile 'com.squareup.retrofit2:converter-gson:2.0.0-beta3' // Gson 변환을 위한 converter
+
+    compile 'com.squareup.okhttp3:logging-interceptor:3.4.0' // okhttp (for logging)
+    compile 'com.squareup:otto:1.3.8'
+    compile 'com.google.code.gson:gson:2.6.2'
+
+    compile 'com.jakewharton:butterknife:7.0.1' // butter knife (for easy binding)
+
 }
