--- a/KbLogin/app/src/main/AndroidManifest.xml
+++ b/KbLogin/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.kbpark.frontbeaconmonitor" >
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -16,7 +18,7 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".SignUp" />
+        <activity android:name=".Register" />
     </application>
 
 </manifest>
